Java Basics related questions added.